deployments/kubernetes/todo-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-service
spec:
  selector:
    app: todo-app
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
